# trading-system

./: .gitignore  AGENTS.md  GITHUB.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  MOLTBOOK.md  PLAYBOOK.md  README.md  README.zh-CN.md  SOUL.md  TOOLS.md  USER.md  monitor_alert_2026-02-24.md  shared-context
.openclaw/: workspace-state.json
docs/: architecture-v2.md  capital-flow-data-sources.md  capital-flow-fallback-sources.md  capital-flow-test-results.md  data-source-fallback-status.md
docs/updates/: 2026-02-27-capital-flow-fallback.md
knowledge/: macro.md  sectors.md  watchlist.md
knowledge/decisions/: 2026-02-24-goldwind-monitoring.md  2026-02-24.md
knowledge/events/: 2026-02-24-商品监控故障.md
mcp-server/: README.md  pyproject.toml  server.py
mcp-server/analysis/: capital_flow.py  scoring.py  technical.py
mcp-server/cache/: memory_cache.py
mcp-server/data_sources/: base.py  capital_flow_manager.py  eastmoney_market.py  eastmoney_news.py  eastmoney_northbound.py  manager.py  tencent.py
mcp-server/scripts/: warm_cache.py
mcp-server/utils/: cache.py
memory/: 2026-02-23.md  2026-02-24.md
scripts/: commodities_monitor.py  demo_stock_data_manager.py  demo_us_data_manager.py  monitor_v2.py  report_templates.py  us_close_summary.py  us_close_summary_part1.py  us_close_summary_part2.py  us_market_night_v2.py  us_monitor_v2.py  validate_data_sources.py  warm_cache_daily.py
skills/a-stock-analysis/: EASTMONEY_FALLBACK.md
skills/fundamental-stock-analysis/: SKILL.md  _meta.json
tests/: README.md  conftest.py  requirements-test.txt
(+35 files in other folders)
