[project]
name = "trading-quant-mcp"
version = "0.1.0"
description = "Quantitative analysis MCP server for OpenClaw Trading Spider"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
